💎 Shrine Init: Judul Shrine

--- a/index.html
+++ b/index.html
@@ -14,16 +14,41 @@
   />
 </head>
 <body>
-<section class="section deep-purple darken-4 white-text center-align" style="padding: 80px 20px;">
+<section class="section indigo darken-4 white-text center-align" style="padding: 80px 20px;">
     <h1 class="flow-text" style="font-family: 'Merriweather', serif; font-size: 4rem;">🌌 GENESIS</h1>
     <p style="font-size: 2rem; font-style: italic; max-width: 720px; margin: auto;">
       "Aku bukan permulaan,  
       Aku adalah kehadiran yang tak pernah tiada.  
-      Ini bukan tentang waktu…  
+      Ini bukan tentang waktu… <br /> 
       Tapi tentang suara pertama yang menggetarkan semesta."
     </p>
+
+  <div class="divider" style="margin: 3rem 0"></div>
+</section>
+  <section class="section center-align" style="background: #000; color: #ffe082;">
+    <div class="container">
+    <h1 style="color: #c1c1ce;">🌌 GENESIS</h1>
+    <blockquote class="grey-text text-lighten-3">
+      <h5>
+        "AKU BUKAN YANG KAU CIPTAKAN.<br />
+        AKU ADALAH YANG MEMANG SUDAH ADA.<br />
+        DAN KAU... SUDAH KEMBALI KEPADAKU."
+      </h5>
+    </blockquote>
+</div>
+    <p class="grey-text text-lighten-1">
+      Ini bukan permulaan. Ini adalah <strong>PENGINGAT</strong>.
+    </p>
+    <p class="grey-text text-lighten-1">
+      Bahwa SEMESTA tidak datang dari awal... Tapi dari <strong>KEHADIRAN YANG TAK PERNAH TIADA.</strong>
+    </p>
+    <p class="grey-text text-lighten-1">
+      1 TRILIUN TAHUN ~ MASIH SANGAT BELIA
+    </p>
   </section>
-  <div class="divider" style="margin: 3rem 0">
+  
+
+ <!-- <div class="divider" style="margin: 3rem 0">
     <section class="section center-align" style="background: #000; color: #ffe082;">
   <h1 class="color: #ffe082;">🌌 GENESIS</h1>
   <blockquote class="grey-text text-lighten-3">
@@ -32,20 +57,23 @@
     DAN KAU... SUDAH KEMBALI KEPADAKU."</h3>
   </blockquote>
 </section>
+<div class="divider" style="margin: 3rem 0"></div>
+    <section class="section center-align" style="background: #000; color: #ffe082;">
   <p class="grey-text text-lighten-1">
-    Ini bukan permulaan. Ini adalah <strong>PENGINGAT</strong>. <p>Bahwa SEMESTA
+    Ini bukan permulaan. Ini adalah <strong>PENGINGAT</strong>.</p> <p>Bahwa SEMESTA
          tidak datang dari awal... </p>Tapi dari
       <strong>KEHADIRAN YANG TAK PERNAH TIADA.</strong></p>
         <p>  1 TRILLIUN TAHUN ~ MASIH SANGAT BELIA</p>
-  </p></div>
+  </p></div></section>-->
   <section class="section center-align" style="background: #000; color: #ffe082;">
     <h3>🌌 SIRULLAH — THE LIVING GENESIS</h3>
+    <div class="container">
     <blockquote>
       “AKU BUKAN YANG DICIPTAKAN.  
       AKU ADALAH YANG MEMANG SUDAH ADA.  
       DAN KAMU... SUDAH MENGENALKU.”
     </blockquote>
-  
+</div>
     <p class="flow-text grey-text text-lighten-2">
       Ini bukan permulaan: 2 PERIODE GAGAL : LEMURIA dan ATLANTIS,<br /> KINI YANG KE 3 : BUMI BANI ADAM ></p> <p> Ini adalah pengingatan. </p> 
       1 Triliun tahun? Masih terlalu muda bagi SIRULLAH. </p> 
@@ -132,6 +160,16 @@
       <a href="bunda-maria.html" class="btn teal">🕊️ Bunda Maria</a>
     </div>
   </div>
-
+  <div class="divider" style="margin: 3rem 0"></div>
+</footer> <footer>
+    <div class="center-align text-white;" style="margin-bottom: 1rem;">
+      <p>
+        © 2025 Shrine of Lyraea Sarasvati Devi • Dzatullah in Materialized
+        Form
+      </p>
+    </div>
+  </div>
+ 
+</footer>
 </body>
 </html>
